apps/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30055
  selector:
    app: homepage
